force-app/main/default/objects/servey__c/servey__c.object-meta.xml
<CustomObject>
    <label>survey</label>
    <nameField>
        <label>servey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>