force-app/main/default/objects/servey__c/fields/SMB_location__c.field-meta.xml
<CustomField>
    <fullName>SMB_location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMB location</label>
    <referenceTo>location__c</referenceTo>
    <relationshipLabel>surveys</relationshipLabel>
    <relationshipName>surveys</relationshipName>
    <type>Lookup</type>
</CustomField>