force-app/main/default/objects/servey__c/fields/survey__c.field-meta.xml
<CustomField>
    <fullName>survey__c</fullName>
    <label>survey</label>
    <referenceTo>service_req_form__c</referenceTo>
    <relationshipLabel>surveys</relationshipLabel>
    <relationshipName>surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>