force-app/main/default/objects/servey__c/fields/ware_house__c.field-meta.xml
<CustomField>
    <fullName>ware_house__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ware house</label>
    <referenceTo>ware_house__c</referenceTo>
    <relationshipLabel>surveys</relationshipLabel>
    <relationshipName>surveys</relationshipName>
    <type>Lookup</type>
</CustomField>